# catgpt

./: .gitignore  60thbirthday.txt  README.md  READMEgoogle.md  TalkingCats Speaking Points.txt  catgpt.py  catgpt.service  catgptagentrt.py  catgptcat2cat.py  catgptfluffy.py  catgptgoogle.py  catgptgoogle.py.old  catgptrt.py  catgptsinglecat.py  catgptsinglecatlocaltts.py  espeak.py  find_device_id.py  gspeak.py  main.py  plotwav.py  pyproject.toml  requirements.txt  start.sh  startmac.sh  stock_agent.py  test.py  testrecord.py
