[project]
name = "catgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.106.1",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.2",
    "numpy>=1.24.0",
    "gtts>=2.5.4",
    "openai-agents[voice]>=0.2.11",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]
